Fix: Abstand bei iPad im Hochformat & responsive spacing

--- a/src/CSS-Folders/home.css
+++ b/src/CSS-Folders/home.css
@@ -12,7 +12,7 @@ body {
   overflow-x: hidden;
 }
 
-.alphaledger-page {
+.home-container-page {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
